<resources>

    <string name="app_name">Netstat NIC</string>
    <string name="title_activity_main">Netstat NIC</string>
    <string name="menu_settings">Settings</string>
    <string name="update">Update</string>
    <string name="protoname">Protocol:</string>
    <string name="statename">State:</string>
    <string name="appname">App name:</string>
    <string name="srcip">Source IP:PORT</string>
    <string name="dstip">Destination IP:PORT</string>
    <string name="title_activity_status">Connection Details</string>
    <string name="no_net">No Internet Connection</string>
    <string name="unk_err">Unknown error, please try again.</string>
    <string name="auth_rejected">Authorization rejected.</string>
    <string name="pick_account">You must pick an account.</string>

</resources>
